# 10xrnaseq

./: .gitignore  README.md
python/: arrange_counts.py  assign.py  count_barcodes.py  generate_fastq.py  generate_pairs.py  popcount.py  sampling.py  split_fastq.py  split_sam.py  subfrag_count.py
src/: Makefile  Makefile.am  configure.ac  count_and_rename.cxx  demul.cxx  distribute_sam.cxx  normalize_fc.cxx  sampling.cxx
